bench(nop-rg): plan 2273 Phase 2 基线重建——TEXT/多小文件口径 + 12B 探测 + m2 基线快照
- CoordinatorEndToEndBenchmark 增 mode=count/text（text 经 ResultPrinter 至 CLI 等价
  autoflush sink）与 many-small 场景（512×128KB）
- VectorCompareBenchmark 增 12B 探测：无 ≥2% 组件级胜出，维持 16B 阈值（2267 R1 留口闭合）
- HotspotProfiler 支持 text 口径；row0 σ_run/profile 落 plan 记录表（无结构漂移裁定）
- 基线快照 install 至 m2（含 Phase 1 修复）；README 同步协议与新基线